<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/delete_entry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        android:text="@string/delete_dialog_message"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:text="@string/delete_this_entry"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_yes"
            style="@style/RoundButtons"
            android:text="@string/yes"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_no"
            android:layout_marginStart="15dp"
            style="@style/RedRoundButtons"
            android:layout_marginEnd="30dp"
            android:text="@string/no"/>

    </LinearLayout>


</LinearLayout>