<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/new_game_search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:translationY="-30dp">
            <TextView
                style="@style/FragmentTitle"
                android:text="@string/new_game"/>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="0dp"
                android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_title"
                    android:layout_width="wrap_content"
                    android:minWidth="400dp"
                    android:maxWidth="500dp"
                    android:layout_height="60dp"
                    android:hint="@string/title"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/FieldHeader"
                android:paddingTop="5dp"
                android:paddingBottom="0dp"
                android:text="@string/developer"/>

            <Spinner
                android:id="@+id/search_developer"
                style="@style/SpinnerTheme"/>

            <TextView
                style="@style/FieldHeader"
                android:paddingTop="5dp"
                android:paddingBottom="0dp"
                android:text="@string/publisher"/>

            <Spinner
                android:id="@+id/search_publisher"
                style="@style/SpinnerTheme"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    style="@style/FieldHeader"
                    android:paddingTop="5dp"
                    android:paddingBottom="0dp"
                    android:text="@string/platform"/>

                <Spinner
                    android:id="@+id/search_platform"
                    style="@style/SpinnerTheme"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="wrap_content"
                    android:minWidth="400dp"
                    android:maxWidth="500dp"
                    android:layout_height="60dp"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:id="@+id/search_genres"
                    android:hint="@string/generes"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/FieldHeader"
                android:paddingTop="5dp"
                android:paddingBottom="0dp"
                android:text="@string/format"/>

            <Spinner
                android:id="@+id/search_format"
                style="@style/SpinnerTheme"/>

            <TextView
                style="@style/FieldHeader"
                android:textSize="20sp"
                android:text="@string/rating"/>
            <Spinner
                android:id="@+id/search_rating"
                style="@style/SpinnerTheme"/>
        </LinearLayout>


    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>